The feature is completed with the unit test, swagger documentation and functionalities. Aditional the unit test that were missing are ready
